--- a/Kolony/Base.lproj/Main.storyboard
+++ b/Kolony/Base.lproj/Main.storyboard
@@ -323,7 +323,7 @@
             <objects>
                 <viewController storyboardIdentifier="MainVC" modalPresentationStyle="fullScreen" useStoryboardIdentifierAsRestorationIdentifier="YES" id="JXj-Jg-4R7" userLabel="MainVC" customClass="MainVC" customModule="Kolony" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YLH-O9-0Td">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="681"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="gKM-8A-Tyx">
@@ -793,27 +793,105 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6fk-iY-Qfy">
-                                <rect key="frame" x="0.0" y="44" width="414" height="720"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="414" id="EYg-5r-XRC"/>
-                                    <constraint firstAttribute="height" constant="769" id="gaa-W7-ick"/>
-                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="liD-kX-EHM">
-                                    <size key="itemSize" width="395" height="172"/>
+                                    <size key="itemSize" width="377" height="181"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                                 </collectionViewFlowLayout>
+                                <label key="backgroundView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please login in order to add items to your cart." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="200" id="rbr-Pj-JON">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="769"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="28"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="CartCell" reuseIdentifier="cartCell" id="caC-ya-ll6" userLabel="cartCell" customClass="CartCell" customModule="Kolony" customModuleProvider="target">
-                                        <rect key="frame" x="9.5" y="0.0" width="395" height="172"/>
+                                        <rect key="frame" x="18.5" y="10" width="377" height="181"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="59q-G1-9sC">
-                                            <rect key="frame" x="0.0" y="0.0" width="395" height="172"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="377" height="181"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nikeAir" translatesAutoresizingMaskIntoConstraints="NO" id="XUL-Ql-OsF">
+                                                    <rect key="frame" x="0.0" y="61" width="162" height="120"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="162" id="MNE-tG-cb5"/>
+                                                        <constraint firstAttribute="height" constant="120" id="R3b-rh-6V8"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6k-cw-SRo">
+                                                    <rect key="frame" x="0.0" y="0.0" width="377" height="53"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="377" id="3Mi-7K-Bzl"/>
+                                                        <constraint firstAttribute="height" constant="53" id="3ZK-6a-nfw"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V6D-ij-MuO">
+                                                    <rect key="frame" x="170" y="61" width="207" height="26"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="207" id="Kcr-Un-2Ih"/>
+                                                        <constraint firstAttribute="height" constant="26" id="bq9-sB-WVs"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2pT-Y3-wTO">
+                                                    <rect key="frame" x="170" y="95" width="207" height="34"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="207" id="0Kk-Gq-yGq"/>
+                                                        <constraint firstAttribute="height" constant="34" id="1Rs-Bn-YIt"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aLN-sI-d9Y">
+                                                    <rect key="frame" x="205" y="137" width="138" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="138" id="hqk-vM-kUc"/>
+                                                        <constraint firstAttribute="height" constant="30" id="maf-1a-hp9"/>
+                                                    </constraints>
+                                                    <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <state key="normal" title="Remove Item" image="deletePic">
+                                                        <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </state>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="V6D-ij-MuO" secondAttribute="trailing" id="40O-zM-kgB"/>
+                                                <constraint firstAttribute="bottom" secondItem="aLN-sI-d9Y" secondAttribute="bottom" constant="14" id="Fed-E6-7OT"/>
+                                                <constraint firstItem="V6D-ij-MuO" firstAttribute="top" secondItem="U6k-cw-SRo" secondAttribute="bottom" constant="8" id="GEO-Gq-eti"/>
+                                                <constraint firstItem="U6k-cw-SRo" firstAttribute="top" secondItem="59q-G1-9sC" secondAttribute="top" id="HJu-TP-GDA"/>
+                                                <constraint firstAttribute="bottom" secondItem="XUL-Ql-OsF" secondAttribute="bottom" id="LKY-37-GX6"/>
+                                                <constraint firstItem="XUL-Ql-OsF" firstAttribute="leading" secondItem="59q-G1-9sC" secondAttribute="leading" id="MYt-lg-oLD"/>
+                                                <constraint firstItem="aLN-sI-d9Y" firstAttribute="top" secondItem="2pT-Y3-wTO" secondAttribute="bottom" constant="8" id="Tji-d0-lPL"/>
+                                                <constraint firstItem="aLN-sI-d9Y" firstAttribute="leading" secondItem="XUL-Ql-OsF" secondAttribute="trailing" constant="43" id="YZC-hp-bY3"/>
+                                                <constraint firstItem="2pT-Y3-wTO" firstAttribute="top" secondItem="V6D-ij-MuO" secondAttribute="bottom" constant="8" id="Yvk-M6-gw6"/>
+                                                <constraint firstAttribute="trailing" secondItem="2pT-Y3-wTO" secondAttribute="trailing" id="aMv-Tb-Ycs"/>
+                                                <constraint firstAttribute="trailing" secondItem="aLN-sI-d9Y" secondAttribute="trailing" constant="34" id="csK-pQ-GKW"/>
+                                                <constraint firstItem="2pT-Y3-wTO" firstAttribute="leading" secondItem="XUL-Ql-OsF" secondAttribute="trailing" constant="8" id="kyp-Bc-1pG"/>
+                                                <constraint firstItem="U6k-cw-SRo" firstAttribute="leading" secondItem="59q-G1-9sC" secondAttribute="leading" id="pmt-Br-nm2"/>
+                                                <constraint firstItem="V6D-ij-MuO" firstAttribute="leading" secondItem="XUL-Ql-OsF" secondAttribute="trailing" constant="8" id="tMy-bF-N8k"/>
+                                                <constraint firstAttribute="trailing" secondItem="U6k-cw-SRo" secondAttribute="trailing" id="yhN-dK-gbu"/>
+                                                <constraint firstItem="XUL-Ql-OsF" firstAttribute="top" secondItem="U6k-cw-SRo" secondAttribute="bottom" constant="8" id="zcA-B4-Zde"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="395" height="172"/>
+                                        <size key="customSize" width="377" height="181"/>
+                                        <connections>
+                                            <outlet property="cartImage" destination="XUL-Ql-OsF" id="DJc-zi-5wT"/>
+                                            <outlet property="cartName" destination="U6k-cw-SRo" id="rsF-PL-AWU"/>
+                                            <outlet property="cartPrice" destination="V6D-ij-MuO" id="pqC-74-vAH"/>
+                                            <outlet property="cartSize" destination="2pT-Y3-wTO" id="LCH-iY-Tni"/>
+                                            <outlet property="removeItemBtn" destination="aLN-sI-d9Y" id="GOc-bf-aBY"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
@@ -824,10 +902,10 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="6fk-iY-Qfy" firstAttribute="trailing" secondItem="Hq3-FU-PxM" secondAttribute="trailing" id="HYV-Ow-VBr"/>
-                            <constraint firstItem="6fk-iY-Qfy" firstAttribute="bottom" secondItem="Hq3-FU-PxM" secondAttribute="bottom" id="IFy-Uk-IbU"/>
-                            <constraint firstItem="6fk-iY-Qfy" firstAttribute="leading" secondItem="Hq3-FU-PxM" secondAttribute="leading" id="lRh-zA-Ggj"/>
-                            <constraint firstItem="6fk-iY-Qfy" firstAttribute="top" secondItem="Hq3-FU-PxM" secondAttribute="top" id="xFq-Iv-Q58"/>
+                            <constraint firstItem="6fk-iY-Qfy" firstAttribute="centerX" secondItem="ME5-r2-4ny" secondAttribute="centerX" id="7WS-AX-Qhe"/>
+                            <constraint firstItem="6fk-iY-Qfy" firstAttribute="top" secondItem="Hq3-FU-PxM" secondAttribute="top" id="JBe-GJ-geD"/>
+                            <constraint firstItem="6fk-iY-Qfy" firstAttribute="leading" secondItem="Hq3-FU-PxM" secondAttribute="leading" id="XjQ-jZ-hu1"/>
+                            <constraint firstItem="6fk-iY-Qfy" firstAttribute="bottom" secondItem="Hq3-FU-PxM" secondAttribute="bottom" id="syZ-i5-JIe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Hq3-FU-PxM"/>
                     </view>
@@ -849,7 +927,8 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="cartCollectionView" destination="6fk-iY-Qfy" id="5pn-pe-BlO"/>
+                        <outlet property="cartEmptyLabel" destination="rbr-Pj-JON" id="Ut8-QG-O4R"/>
+                        <outlet property="collectionView" destination="6fk-iY-Qfy" id="5pn-pe-BlO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QaU-c1-NUk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -888,6 +967,7 @@
         <image name="cartPic" width="24" height="24"/>
         <image name="cartPic1" width="36" height="36"/>
         <image name="chevron.left" catalog="system" width="48" height="64"/>
+        <image name="deletePic" width="24" height="24"/>
         <image name="homePic" width="36" height="36"/>
         <image name="menuVert" width="36" height="36"/>
         <image name="nikeAir" width="333.33334350585938" height="222.33332824707031"/>
@@ -895,7 +975,7 @@
         <image name="round_tune_black_36pt" width="36" height="36"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="sbP-hK-w5H"/>
-        <segue reference="0hF-rw-AkG"/>
+        <segue reference="Eca-M0-IVE"/>
+        <segue reference="4vJ-H9-jeQ"/>
     </inferredMetricsTieBreakers>
 </document>
